📚 connect tf.js fld

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 </body>
 
 <link rel="stylesheet" href="style.css">
+
+<!-- TF.js face landmark model -->
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.6.0/dist/tf.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-landmarks-detection"></script>
+
 <script src="script.js"></script>
 
 </html>
