basic screen changer

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Before Your Eyes</title>
 </head>
 <body>
-    
-Blinked: <span></span>
 
 <video id="video" autoplay></video>
 
+<img src="images/img1.png" id="img1">
+<img src="images/img2.png" id="img2">
 
 </body>
 
