📹 play video when eyes closed

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
 
-<video id="video" autoplay></video>
+<video id="camera" autoplay></video>
 
-<img src="images/img1.png" id="img1">
-<img src="images/img2.png" id="img2">
+<video src="./images/video.mp4" id="vid" muted></video>
 
 </body>
 
