--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Before Your Eyes</title>
+    <title>Ender Earth</title>
 </head>
 <body>
 
 <video id="camera" autoplay></video>
-
-<video src="./images/video.mp4" id="vid" muted></video>
 
 </body>
 
@@ -19,6 +17,9 @@
 <!-- TF.js face landmark model -->
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.6.0/dist/tf.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-landmarks-detection"></script>
+
+<script src="blink.js"></script>
+<script src="tools.js"></script>
 
 <script src="script.js"></script>
 
