--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 </head>
 <body>
 
-<video id="camera" autoplay></video>
+    <video id="camera" autoplay></video>
 
 </body>
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
+
+
 
 <!-- TF.js face landmark model -->
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.6.0/dist/tf.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-landmarks-detection"></script>
 
-<script src="blink.js"></script>
-<script src="tools.js"></script>
+<script src="script/blink.js"></script>
+<script src="script/maps.js"></script>
+<script src="script/tools.js"></script>
 
-<script src="script.js"></script>
+<script src="script/script.js"></script>
 
 </html>
